# SmartContract-moradiacompartilhada

./: Cargo.toml  README.md
src/: lib.rs
